- Fixed error that hid both multicolumn and alternate-multicolumn.liquid when on mobile resolution. Changed class 'multicolumn' to 'alternate-multicolumn' on all instances of 'alternate-multicolumn.liquid'

--- a/assets/section-alternate-multicolumn.css
+++ b/assets/section-alternate-multicolumn.css
@@ -1,17 +1,17 @@
-.multicolumn .title {
+.alternate-multicolumn .title {
     margin: 0;
 }
 
-.multicolumn.no-heading .title {
+.alternate-multicolumn.no-heading .title {
     display: none;
 }
 
-.multicolumn .title-wrapper-with-link {
+.alternate-multicolumn .title-wrapper-with-link {
     margin-top: 0;
 }
 
 @media screen and (max-width: 749px) {
-    .multicolumn {
+    .alternate-multicolumn {
         display: none;
     }
 }
@@ -31,12 +31,12 @@
     margin-right: auto;
 }
 
-.multicolumn .button {
+.alternate-multicolumn .button {
     margin-top: 1.5rem;
 }
 
 @media screen and (min-width: 750px) {
-    .multicolumn .button {
+    .alternate-multicolumn .button {
         margin-top: 4rem;
     }
 }
@@ -55,16 +55,16 @@
     display: none;
 }
 
-.multicolumn:not(.background-none) .multicolumn-card {
+.alternate-multicolumn:not(.background-none) .multicolumn-card {
     background: rgb(var(--color-background));
     height: 100%;
 }
 
-.multicolumn.background-primary .multicolumn-card {
+.alternate-multicolumn.background-primary .multicolumn-card {
     background: rgb(var(--color-background)) linear-gradient(rgba(var(--color-foreground), 0.04), rgba(var(--color-foreground), 0.04));
 }
 
-.multicolumn.background-primary .alternate-multicolumn-card {
+.alternate-multicolumn.background-primary .alternate-multicolumn-card {
     background: rgb(var(--color-background)) linear-gradient(rgba(var(--color-foreground), 0.04), rgba(var(--color-foreground), 0.04));
 }
 
@@ -173,7 +173,7 @@
         padding-bottom: 1rem;
     }
 
-    .multicolumn.background-none .slider.slider--mobile {
+    .alternate-multicolumn.background-none .slider.slider--mobile {
         margin-bottom: 0rem;
     }
 }
@@ -205,7 +205,7 @@
     overflow: hidden;
 }
 
-.multicolumn.background-none .multicolumn-card {
+.alternate-multicolumn.background-none .multicolumn-card {
     border-radius: 0;
 }
 
